Simplifies visual debugger to be accessible from normal browser instead of OSX app. `http://localhost:9911`

--- a/TestApp/Podfile
+++ b/TestApp/Podfile
@@ -3,5 +3,5 @@ use_frameworks!
 target 'DebuggerTestApp' do
   pod 'RxSwift'
   pod 'RxCocoa'
-  pod 'Socket.IO-Client-Swift'
+  pod 'RxSwiftDebugger', :path => ".."
 end
